--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navigation: # Navigation links
 tagline: >
   지옥에서 돌아온 프로그래머 헬프입니다.
 
-hero_img: bg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
+#hero_img: bg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: fg9658@gmail.com # email for form submission
 github_username:  rebirthlee # replace with your_github_username or comment to remove link from footer
